add embeded js templating

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
-  <html lang=en>
-    <head>
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    </head>
-    
-    
+<html lang=en>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="public/css/index.css" type="text/css">
+  </head>
+
+  <body>
+    <%- include('partials/header'); %>  
+      <h3 class='text-center'>this is just regular body stuff</h3>
+      <div class='center-block'>
+          this is where some data could go - maybe a partial
+      </div>
+  </body>
+</html>
+
