add nav and admin button

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,3 +1,7 @@
 <header>
-  <h1> IVIN </h1>
+  <nav>
+    <div class='pad'></div>
+    <h1 class='text-center'> IVIN </h1>
+    <button>admin</button>
+  </nav>
 </header>
